[package]
name = "balanced-direction"
description = "A library to manipulate directions with discrete logic."
authors = ["Sébastien GELDREICH <trehinos@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["direction", "balanced_ternary", "base9", "logic"]
categories = ["data-structures", "mathematics", "science", "no-std", "graphics"]
repository = "https://github.com/Trehinos/balanced-direction"

[features]
default = ["ternary"]
ternary = ["dep:balanced-ternary"]

[dependencies]
balanced-ternary = { version = "^1", optional = true, default-features = false }